# agora-cocos-rtc

./: .gitignore  .release-it.json  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
customer-delivery/example-basic-call/native/engine/ios/: AppDelegate.mm  CMakeLists.txt  Info.plist  Pre-AutoLoadPlulgins.cmake
customer-delivery/example-basic-call/native/engine/ios/agora-rtc/: AgoraEngineTextureSlotBridge.h  AgoraEngineTextureSlotBridge.mm  AgoraRtcBridge.swift  AgoraRtcPlugin.mm
docs/: Agora-Cocos-RTC-SDK-API-Guide.md  LOG_UI_HANDOFF.md  api-verification-matrix.md  customer-architecture-note.md  customer-delivery-note.md  customer-integration.md  index.html
scripts/: build-all-platforms.sh  capture-log-ui-ios.sh  collect-cocos-test-report.mjs  customer-delivery-template-map.json  dev-android.sh  dev-google-play.sh  dev-ios-device.sh  dev-ios.sh  fetch-agora-maven.mjs  generate-api-reference.mjs  generate-ios-podfile.mjs  inject-cocos-test-runner.mjs  integrate-ios-project.rb  package-customer-delivery.sh  package-sdk.sh  patch-exported-main-bundle.mjs  prepare-example.sh  run_cocos_integration_test_android.sh  run_cocos_integration_test_ios.sh  sync-android-app-bridge.mjs  sync-android-runtime-main-assets.mjs  sync-customer-delivery-templates.mjs  sync-example-sdk-config.mjs  sync-ios-demo-permissions-bridge.mjs  sync-native-engine-texture-bridge.mjs  sync-sdk-version.mjs  update-native-deps.mjs  write-cocos-native-build-config.mjs  write-example-build-config.mjs
tests/: agora-client.test.ts  bridge-transport.test.ts  build-hooks.test.ts  (+20 more)
(+136 files in other folders)
